--- a/.github/workflows/build-and-package.yml
+++ b/.github/workflows/build-and-package.yml
@@ -54,5 +54,5 @@ jobs:
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
           git add -A
-          git commit -n -m "chore: auto-build and package [skip ci]"  # skip ci 避免循环触发
+          git commit -m "chore: auto-build and package [skip ci]"  # skip ci 避免循环触发
           git push
