--- a/.github/workflows/test-and-lint.yml
+++ b/.github/workflows/test-and-lint.yml
@@ -1,10 +1,11 @@
 name: Test and Lint
 
 on:
-  push:
-    branches-ignore: [ release ]
-  pull_request:
-    branches: [ main ]
+#  push:
+#    branches-ignore: [ release ]
+#  pull_request:
+#    branches: [ main ]
+  workflow_dispatch:
 
 jobs:
   tests:
